# rust-financial-database

./: .gitignore  Cargo.toml  README.md  README.txt  notes.txt
.github/workflows/: rust-ci.yml
src/: lib.rs  main.rs
src/alpha/: mod.rs
src/alpha/utility_functions/: mod.rs
src/data_apis/: eod.rs  mod.rs
src/database/: mod.rs
src/database/data_apis/: eod.rs
src/database/database_service/: mod.rs  mongodb.rs
src/database/models/: eod_models.rs  mod.rs
src/database/utility_functions/: mod.rs
src/database_service/: mod.rs  mongodb.rs
src/models/: eod_models.rs  mod.rs
src/securities/: equities.rs  misc.rs  mod.rs
src/utility_functions/: mod.rs
src/wrappers/: mod.rs  models.rs
