[package]
name = "molly_db"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"]}
mongodb = {version = "2.3.1", features = ["bson-chrono-0_4"]}
bson = { version = "2", features = ["chrono-0_4"] }
serde_json = "1.0.107"
polars = { version = "0.36.2", features = ["lazy", "json", "serde", "ndarray", "strings", "dtype-datetime", "rows"]}
log = "0.4.20"
env_logger = "0.10.0"
futures = "0.3"
anyhow = "1.0"
# rayon = "1.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
polars = { version = "0.36.2", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"]}
# mockall = "0.12.1"
# dotenv = "0.15.0"